```mermaid
classDiagram
    %% v2.1.0 即时+智能搜索统一架构类图

    class InstantSearchResult {
        <<Entity>> 统一原始结果实体
        -string _id [雪花ID]
        -string task_id
        -string search_type ["instant"|"smart"]

        %% 共享字段
        -string title
        -string url
        -string content
        -string snippet
        -string markdown_content
        -string html_content
        -string status
        -datetime created_at

        %% 即时搜索专属（search_type="instant"）
        -string content_hash
        -string url_normalized
        -int discovered_count
        -datetime first_discovered_at
        -datetime last_discovered_at
        -float relevance_score
        -float quality_score

        %% 智能搜索专属（search_type="smart"）
        -float composite_score
        -float avg_relevance_score
        -float position_score
        -float multi_source_score
        -array sources
        -int source_count
        -bool multi_source_bonus
    }

    class InstantProcessedResult {
        <<Entity>> 统一AI处理结果实体
        -string _id [雪花ID]
        -string raw_result_id [→ InstantSearchResult]
        -string task_id
        -string search_type ["instant"|"smart"]

        %% AI增强数据
        -string translated_title
        -string translated_content
        -string summary
        -array key_points
        -string sentiment
        -array categories

        %% AI元数据
        -string ai_model
        -int ai_processing_time_ms
        -float ai_confidence_score
        -object ai_metadata

        %% 用户操作
        -string status [pending|processing|completed|failed|archived|deleted]
        -int user_rating
        -string user_notes

        %% 时间戳
        -datetime created_at
        -datetime processed_at
        -datetime updated_at

        %% 错误处理
        -string processing_error
        -int retry_count
    }

    class InstantSearchTask {
        <<Entity>> 即时搜索任务
        -string id
        -string query
        -string status
    }

    class SmartSearchTask {
        <<Entity>> 智能搜索任务
        -string id
        -string original_query
        -array sub_queries
        -string status
    }

    %% 关系
    InstantSearchResult "1" --o "0..1" InstantProcessedResult : raw_result_id
    InstantSearchTask "1" --o "*" InstantSearchResult : task_id (instant)
    SmartSearchTask "1" --o "*" InstantSearchResult : task_id (smart)

    %% 注释
    note for InstantSearchResult "v2.1.0 统一存储:\n- search_type='instant': 即时搜索结果\n- search_type='smart': 智能搜索聚合结果\n✅ 通过search_type区分类型\n✅ 灵活字段设计兼容两种类型"

    note for InstantProcessedResult "v2.1.0 统一AI处理:\n- 即时和智能搜索共享AI处理流程\n- 统一的状态管理和用户操作\n- 继承原始结果的search_type\n✅ 职责分离一致性\n✅ 避免重复开发"
```
